--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  command = "make html"
+  command = "cd docs && make html"
   functions = "netlify/functions"
   publish = "_build/html"
 
