--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
 [build]
   command = "cd docs && make html"
   functions = "netlify/functions"
-  publish = "docs/_build/html"
+  publish = "docs/build/html"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
